src/style.styl
@import './styles/typography'
@import './styles/spacing'

html,
body
  height 100%

body
  margin 0
  min-width 500px

  font-family var(--fontFamily)
  font-size var(--sizeBase)

  -webkit-font-smoothing antialiased
  -moz-osx-font-smoothing grayscale

  ::selection
    background var(--selection)
  ::-moz-selection
    background var(--selection)


.ripple
  position absolute
  border-radius 50%
  width 5px
  height 5px
  background white
  top calc(50% - 2.5px)
  left calc(50% - 2.5px)
  animation ripple-animation 2s

@keyframes ripple-animation
  from
    transform scale(1)
    opacity 0.4
  to
    transform scale(100)
    opacity 0

